Fix font size not displaying correctly
Due to total-number and total-text not in DOM yet when font size was updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1404,6 +1404,10 @@
           </label>
           <br />
         </div>
+        <div *ngIf="chart.options.includes('arcWidth') && doughnut">
+          <label>Arc width (fraction of radius):</label><br />
+          <input type="number" [disabled]="!doughnut" [(ngModel)]="arcWidth" max="1" min="0" step="0.01" /><br />
+        </div>
         <div *ngIf="doughnut && chart.options.includes('displayTotal')">
           <label>
             <input type="checkbox" [(ngModel)]="displayTotal" />
@@ -1411,21 +1415,17 @@
           </label>
           <br />
         </div>
-        <div *ngIf="doughnut && chart.options.includes('totalFontSize')">
+        <div *ngIf="doughnut && displayTotal && chart.options.includes('totalFontSize')">
           <label>
             <label>Total Font Size (px):</label><br />
             <input type="number" [disabled]="!doughnut" [(ngModel)]="totalFontSize" min="0" step="1" /><br />
           </label>
         </div>
-        <div *ngIf="doughnut && chart.options.includes('totalDisplayText')">
+        <div *ngIf="doughnut && displayTotal && chart.options.includes('totalDisplayText')">
           <label>
             <label>Total Display Text:</label><br />
             <input type="text" [(ngModel)]="totalDisplayText" /><br />
           </label>
-        </div>
-        <div *ngIf="chart.options.includes('arcWidth') && doughnut">
-          <label>Arc width (fraction of radius):</label><br />
-          <input type="number" [disabled]="!doughnut" [(ngModel)]="arcWidth" max="1" min="0" step="0.01" /><br />
         </div>
         <div *ngIf="chart.options.includes('explodeSlices') && !doughnut">
           <label>
