Add tooltip and initial zoom and center coordinates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -606,6 +606,9 @@
         [legendPosition]="legendPosition"
         [scheme]="colorScheme"
         [results]="mapChartData"
+        [mapZoom]="mapZoom"
+        [initCoordX]="initCoordX"
+        [initCoordY]="initCoordY"
         (select)="onSelect($event)"
       >
       </map-chart-component>
@@ -1155,6 +1158,7 @@
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{ barChart | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{ lineChartSeries | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'timelineFilter'">{{ timelineFilterBarData | json }}</pre>
+        <pre *ngIf="chart.inputFormat === 'mapChart'">{{ mapChartData | json }}</pre>
         <div>
           <label>
             <input type="checkbox" [(ngModel)]="realTimeData" />
@@ -1568,6 +1572,19 @@
         <div *ngIf="chart.options.includes('yScaleMax')">
           <label>Maximum Y-Scale value</label><br />
           <input type="number" [(ngModel)]="yScaleMax" /><br />
+        </div>
+
+        <div *ngIf="chart.options.includes('mapZoom')">
+          <label>Initial Zoom</label><br />
+          <input type="number" [(ngModel)]="mapZoom" /><br />
+        </div>
+        <div *ngIf="chart.options.includes('initCoordX')">
+          <label>Initial Center X Coordinate</label><br />
+          <input type="number" [(ngModel)]="initCoordX" /><br />
+        </div>
+        <div *ngIf="chart.options.includes('initCoordY')">
+          <label>Initial Center Y Coordinate</label><br />
+          <input type="number" [(ngModel)]="initCoordY" /><br />
         </div>
       </div>
       <h3><a href="https://swimlane.gitbooks.io/ngx-charts/content/" target="_blank">Documentation</a></h3>
