Add more customization to map chart
New option to change map language and map location

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -609,6 +609,10 @@
         [mapZoom]="mapZoom"
         [initCoordX]="initCoordX"
         [initCoordY]="initCoordY"
+        [centerMapAt]="centerMapAt"
+        [latitude]="latitude"
+        [longitude]="longitude"
+        [mapLanguage]="mapLanguage"
         (select)="onSelect($event)"
       >
       </map-chart-component>
@@ -1585,6 +1589,21 @@
         <div *ngIf="chart.options.includes('initCoordY')">
           <label>Initial Center Y Coordinate</label><br />
           <input type="number" [(ngModel)]="initCoordY" /><br />
+        </div>
+        <div *ngIf="chart.options.includes('mapLanguage')">
+          <label>Map Language:</label><br />
+          <select  [(ngModel)]="mapLanguage">
+            <option value="native">Native</option>
+            <option value="german">German</option>
+            <option value="english">English</option></select
+          ><br />
+        </div>
+        <div *ngIf="chart.options.includes('centerMapAt')">
+          <label>Latitude:</label><br />
+          <input type="number" [(ngModel)]="latitude" /><br />
+          <label>Longitude:</label><br />
+          <input type="number" [(ngModel)]="longitude" /><br />
+          <button class="btn btn-primary" (click)="mapChangePosition()">Change Map Center</button>
         </div>
       </div>
       <h3><a href="https://swimlane.gitbooks.io/ngx-charts/content/" target="_blank">Documentation</a></h3>
