--- a/src/app/custom-charts/map-chart/map-chart.component.scss
+++ b/src/app/custom-charts/map-chart/map-chart.component.scss
@@ -11,10 +11,10 @@
       border: none;
     }
     
-    .leaflet-tooltip-top:before, 
-    .leaflet-tooltip-bottom:before, 
-    .leaflet-tooltip-left:before, 
-    .leaflet-tooltip-right:before {
+    .leaflet-tooltip-top::before, 
+    .leaflet-tooltip-bottom::before, 
+    .leaflet-tooltip-left::before, 
+    .leaflet-tooltip-right::before {
         border-top-color: black;
     }
 
