--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -174,6 +174,7 @@
         [showGridLines]="showGridLines"
         [barPadding]="barPadding"
         [roundDomains]="roundDomains"
+        [roundEdges]="roundEdges"
         [yScaleMax]="yScaleMax"
         [noBarWhenZero]="noBarWhenZero"
         [showDataLabel]="showDataLabel"
