feat: The legend displays black in light mode

--- a/projects/swimlane/ngx-charts/src/lib/common/legend/legend.component.scss
+++ b/projects/swimlane/ngx-charts/src/lib/common/legend/legend.component.scss
@@ -1,3 +1,13 @@
+.light .chart-legend {
+  .legend-label {
+    color: #000;
+
+    .active .legend-label-text {
+      color: #afb7c8;
+    }
+  }
+}
+
 .chart-legend {
   display: inline-block;
   padding: 0;
