feat: export charts option transparent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1604,6 +1604,11 @@
         </select>
 
         <br />
+        <label>
+          <input type="checkbox" [(ngModel)]="transparentBackground" />
+          Transparent
+        </label>
+
         <br />
         <button class="btn btn-primary" (click)="exportImage()">Export Image</button>
       </div>
