curve fitting on combo chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -594,6 +594,7 @@
         [yAxisLabelRight]="yAxisLabelRight"
         [noBarWhenZero]="noBarWhenZero"
         [wrapTicks]="wrapTicks"
+        [curve]="curve"
         (select)="onSelect($event)"
       >
       </combo-chart-component>
