Add custom color option to demo
Input is the two gradient stops

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [results]="single"
         [animations]="animations"
         [gradient]="gradient"
@@ -46,6 +47,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [results]="single"
         [animations]="animations"
         [gradient]="gradient"
@@ -84,6 +86,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [results]="multi"
         [animations]="animations"
         [gradient]="gradient"
@@ -123,6 +126,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [results]="multi"
         [animations]="animations"
         [gradient]="gradient"
@@ -162,6 +166,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [results]="multi"
         [animations]="animations"
         [gradient]="gradient"
@@ -199,6 +204,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [results]="multi"
         [animations]="animations"
         [gradient]="gradient"
@@ -236,6 +242,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [results]="multi"
         [animations]="animations"
         [gradient]="gradient"
@@ -271,6 +278,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [results]="multi"
         [animations]="animations"
         [gradient]="gradient"
@@ -305,6 +313,7 @@
         [view]="view"
         [scheme]="colorScheme"
         [customColors]="customColorsNonlinear"
+        [useCustomColors]="useCustomColors"
         [results]="single"
         [animations]="animations"
         [legend]="showLegend"
@@ -329,6 +338,7 @@
         [view]="view"
         [scheme]="colorScheme"
         [customColors]="customColorsNonlinear"
+        [useCustomColors]="useCustomColors"
         [results]="single"
         [valueFormatting]="valueFormatting"
         [animations]="animations"
@@ -346,6 +356,7 @@
         [view]="view"
         [scheme]="colorScheme"
         [customColors]="customColorsNonlinear"
+        [useCustomColors]="useCustomColors"
         [results]="single"
         [animations]="animations"
         [tooltipDisabled]="tooltipDisabled"
@@ -362,6 +373,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [results]="dateDataWithOrWithoutRange"
         [animations]="animations"
         [legend]="showLegend"
@@ -403,6 +415,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [results]="multi"
         [animations]="animations"
         [legend]="showLegend"
@@ -453,6 +466,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [roundDomains]="roundDomains"
         [tooltipDisabled]="tooltipDisabled"
         [minRadius]="minRadius"
@@ -475,6 +489,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [results]="dateData"
         [animations]="animations"
         [legend]="showLegend"
@@ -515,6 +530,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [results]="dateData"
         [animations]="animations"
         [legend]="showLegend"
@@ -554,6 +570,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [results]="dateData"
         [animations]="animations"
         [legend]="showLegend"
@@ -640,6 +657,7 @@
         [maxYAxisTickLength]="maxYAxisTickLength"
         [wrapTicks]="wrapTicks"
         [customColors]="customColorsLinear"
+        [useCustomColors]="useCustomColors"
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
@@ -669,6 +687,7 @@
         [maxYAxisTickLength]="maxYAxisTickLength"
         [wrapTicks]="wrapTicks"
         [customColors]="customColorsLinear"
+        [useCustomColors]="useCustomColors"
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
@@ -686,6 +705,7 @@
         [valueFormatting]="currencyFormatting"
         [gradient]="gradient"
         [customColors]="customColorsNonlinear"
+        [useCustomColors]="useCustomColors"
         (select)="select($event)"
       >
       </ngx-charts-tree-map>
@@ -699,6 +719,7 @@
         [results]="single"
         [animations]="animations"
         [customColors]="customColorsNonlinear"
+        [useCustomColors]="useCustomColors"
         (select)="select($event)"
       >
       </ngx-charts-number-card>
@@ -710,6 +731,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [strokeColor]="strokeColor"
         [strokeWidth]="strokeWidth"
         [xAxis]="showXAxis"
@@ -760,6 +782,7 @@
           [view]="view"
           [scheme]="colorScheme"
           [customColors]="customColorsNonlinear"
+          [useCustomColors]="useCustomColors"
           cardColor="#232837"
           emptyColor="#1e222e"
           [results]="statusData"
@@ -792,6 +815,7 @@
         [tooltipDisabled]="tooltipDisabled"
         [showText]="showText"
         [customColors]="customColorsNonlinear"
+        [useCustomColors]="useCustomColors"
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
@@ -809,6 +833,7 @@
         [previousValue]="gaugePreviousValue"
         [units]="gaugeUnits"
         [customColors]="customColorsNonlinear"
+        [useCustomColors]="useCustomColors"
         (select)="select($event)"
       >
       </ngx-charts-linear-gauge>
@@ -827,6 +852,7 @@
           [scheme]="colorScheme"
           [schemeType]="schemeType"
           [customColors]="customColors"
+          [useCustomColors]="useCustomColors"
           [results]="plotData"
           [animations]="animations"
           [legend]="false"
@@ -861,6 +887,7 @@
           [scheme]="colorScheme"
           [schemeType]="schemeType"
           [customColors]="customColors"
+          [useCustomColors]="useCustomColors"
           [results]="plotData"
           [animations]="animations"
           [legend]="false"
@@ -913,6 +940,7 @@
           [tooltipDisabled]="tooltipDisabled"
           [gradient]="gradient"
           [customColors]="customColorsNonlinear"
+          [useCustomColors]="useCustomColors"
           (select)="treemapSelect($event)"
         >
         </ngx-charts-tree-map>
@@ -950,6 +978,7 @@
           [scheme]="colorScheme"
           [schemeType]="schemeType"
           [customColors]="customColors"
+          [useCustomColors]="useCustomColors"
           [roundDomains]="roundDomains"
           [tooltipDisabled]="tooltipDisabled"
           [minRadius]="minRadius"
@@ -1002,6 +1031,7 @@
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [customColors]="customColors"
+        [useCustomColors]="useCustomColors"
         [results]="single"
         [animations]="animations"
         [gradient]="gradient"
@@ -1217,6 +1247,22 @@
         <option *ngFor="let scheme of colorSets" [value]="scheme.name">{{ scheme.name }}</option>
       </select>
 
+      <div [hidden]="!colorVisible" style="margin-left: 10px">
+        <div *ngIf="chart.options.includes('customColors') && (isLinear || chartType === 'heat-map' || chartType === 'calendar')">
+          <label>
+            <input type="checkbox" [(ngModel)]="useCustomColors" />
+            Custom Colors
+          </label>
+          <br />
+        </div>
+        <div *ngIf="useCustomColors">
+          <label>Gradient Color 1:</label><input type="text" [(ngModel)]="gradientStop1" (ngModelChange)="setCustomColor()"/>
+        </div>
+        <div *ngIf="useCustomColors">
+          <label>Gradient Color 2:</label><input type="text" [(ngModel)]="gradientStop2" (ngModelChange)="setCustomColor()"/>
+        </div>
+      </div>
+
       <select
         *ngIf="chart.options.includes('schemeType')"
         [hidden]="!colorVisible"
@@ -1246,19 +1292,6 @@
             Animations
           </label>
           <br />
-        </div>
-        <div *ngIf="chart.options.includes('customColors') && (isLinear || chartType === 'heat-map' || chartType === 'calendar')">
-          <label>
-            <input type="checkbox" [(ngModel)]="useCustomColors" />
-            Custom Colors
-          </label>
-          <br />
-        </div>
-        <div *ngIf="useCustomColors">
-          <label>Gradient Color 1:</label><input type="text" [(ngModel)]="gradientStop1" (ngModelChange)="setCustomColor()"/>
-        </div>
-        <div *ngIf="useCustomColors">
-          <label>Gradient Color 2:</label><input type="text" [(ngModel)]="gradientStop2" (ngModelChange)="setCustomColor()"/>
         </div>
         <div *ngIf="chart.options.includes('showXAxis')">
           <label>
